--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="row">
      
       <div class="col-sm-6"style=" padding-top: 53px;padding-right: 175px;" >
-        <img src="images/balu6.jpeg" class="rounded-circle img-fluid" style="width: 400px;height: 400px;" alt="Cinque Terre"> 
+        <img src="images/balu6.jpeg" class="img-rounded img-fluid" style="width: 400px;height: 400px;" alt="Cinque Terre"> 
       </div >
       <div class="col-sm-6">
         <div style=" padding-top: 88px;padding-left: 88px;">
