Designing completed in mobile

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 </header>
-<section  id="home">
+<section  id="home"style="width:100%">
     <div class="container " >
         <div class="row ">
           <div class="col-sm-6">
