final Designing completed in mobile

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 <section  id="home"style="width:100%">
     <div class="container " >
         <div class="row ">
-          <div class="col-sm-6">
+          <!-- <div class="col-sm-6">
             <div style="height: 300px;width: 300px;">
               
             </div>
-          </div>
-            <div class="col-sm-6" style="color:white; padding-left: 227px;padding-top: 27px;">
+          </div> -->
+            <div class="col-sm-12 text-left" style="color:#bdffe7;;padding-top: 27px;">
                 <div>
                     <h3>Freelance Web Developer</h3>
                     <h4>Ernakulam,Kerala,India</h4>
