--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balu Critaxzz</title>
     <link href="//fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/balu.css">
     <link rel="icon" href="images/balu.jpg" type="image/gif" sizes="26x26">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -54,12 +55,7 @@
 <section  id="home"style="width:100%">
     <div class="container " >
         <div class="row ">
-          <!-- <div class="col-sm-6">
-            <div style="height: 300px;width: 300px;">
-              
-            </div>
-          </div> -->
-            <div class="col-sm-12 text-left" style="color:#b4e0ea;;padding-top: 27px;">
+            <div class="col-sm-12 text-left" style="color:#ffffff;;padding-top: 27px;">
                 <div>
                     <h3>Freelance Web Developer</h3>
                     <h4>Ernakulam,Kerala,India</h4>
@@ -186,7 +182,7 @@
 	<div class="container " style="padding-top:45px;padding-bottom: 45px;">
     <h2 class="text-center">Want to get in touch.?</h2>
 			<div class="col-md-12">
-        <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="">
+        <form action="" id="submit-form">
           <div class="main-input" style="padding-top: 30px;">
             <div >
               <input type="text" name="name" placeholder="Enter your name" class="contact-input" required="" />
@@ -233,5 +229,24 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/522b023701.js" crossorigin="anonymous"></script>
+<script>
+  $("#submit-form").submit((e)=>{
+      e.preventDefault()
+      $.ajax({
+          url:"",
+          data:$("#submit-form").serialize(),
+          method:"post",
+          success:function (response){
+              alert("Form submitted successfully")
+              window.location.reload()
+              //window.location.href="https://google.com"
+          },
+          error:function (err){
+              alert("Something Error")
+
+          }
+      })
+  })
+</script>
 </body>
 </html>
