--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balu Critaxzz</title>
     <link href="//fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/balu.css">
     <link rel="icon" href="images/balu.jpg" type="image/gif" sizes="26x26">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script> 
+  </head>
 <body>
 <header class="header-div">
     <div class="row">
@@ -182,24 +182,24 @@
 	<div class="container " style="padding-top:45px;padding-bottom: 45px;">
     <h2 class="text-center">Want to get in touch.?</h2>
 			<div class="col-md-12">
-        <form action="" id="submit-form">
+        <form id="submit-form" action="">
           <div class="main-input" style="padding-top: 30px;">
             <div >
-              <input type="text" name="name" placeholder="Enter your name" class="contact-input" required="" />
+              <input type="text" id="fname" name="name" placeholder="Enter your name" class="contact-input" required="" />
             </div>
             <div>
-              <input type="email" name="Sender" placeholder="Enter your mail" class="contact-input" required="" />
+              <input type="email" id="femail" name="email" placeholder="Enter your mail" class="contact-input" required="" />
             </div>
             <div>
-              <input type="email" name="Subject" placeholder="Subject" class="contact-input" />
+              <input type="text" id="fsubject" name="subject" placeholder="Subject" class="contact-input" />
             </div>
             <div>
-              <textarea class="contact-textarea contact-input" name="Message" placeholder="Enter your message" required=""></textarea>
+              <textarea class="contact-textarea contact-input" id="fmessage" name="message" placeholder="Enter your message" required=""></textarea>
             </div> 
           </div>
           <div class="text-right">
-            <button class="btn" style="background-color: rgb(50, 105, 58) ; color: blanchedalmond;width: 100px;height: 45px;">Send</button>
-          </div>
+            <input type="submit" value="Submit" style="background-color: rgb(50, 105, 58) ; color: blanchedalmond;width: 100px;height: 45px; border-radius: 10px;">
+            </div>
         </form>
       </div>
 		</div>
@@ -225,15 +225,11 @@
     </div>
   </div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/522b023701.js" crossorigin="anonymous"></script>
 <script>
   $("#submit-form").submit((e)=>{
       e.preventDefault()
       $.ajax({
-          url:"",
+          url:"https://script.google.com/macros/s/AKfycbwNGAqmtvp9wJnX0PiS_DY_YX6nssR4CBQSCKk7/exec",
           data:$("#submit-form").serialize(),
           method:"post",
           success:function (response){
@@ -248,5 +244,9 @@
       })
   })
 </script>
-</body>
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/522b023701.js" crossorigin="anonymous"></script>
+</body> 
 </html>
